--- a/public/assets/styles/general.styl
+++ b/public/assets/styles/general.styl
@@ -24,15 +24,15 @@ a
   top 65px
 
 .main
-  padding 20px
+  // padding 20px
 
 @media (min-width: 768px)
   .main
-    padding-right 40px
-    padding-left 40px
+    // padding-right 40px
+    // padding-left 40px
 
 .main .page-header
-  margin-top 0
+  // margin-top 0
 
 .main .sub-header
   padding-bottom 10px
